{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 1814,
  "lineage": "72410ad1-7f0d-c66b-6dee-2960d79508df",
  "resources": [
    {
      "module": "module.eks_cluster_admin_with_role",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "k8s_dev",
      "provider": "module.eks_cluster_admin_with_role.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dev",
            "metadata": [
              {
                "generation": 0,
                "name": "dev",
                "resource_version": "614",
                "uid": "711de5a3-ae2b-4ba3-8bba-a3f1a658dcf6"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluester.aws_eks_cluster.eks_cluester",
            "module.eks_cluester.aws_iam_role.eks_cluster_master_role",
            "module.eks_cluester.aws_iam_role_policy_attachment.iam_role_eks_vpc_policy_attachment",
            "module.eks_cluester.aws_iam_role_policy_attachment.iam_role_policy_attachment",
            "module.eks_cluester.data.aws_iam_policy.eks_cluster_master_policy",
            "module.eks_cluester.data.aws_iam_policy.eks_cluster_vpc_policy",
            "module.eks_cluester.data.aws_iam_policy_document.iam_policy_document",
            "module.eks_cluster_admin_with_role.data.aws_eks_cluster_auth.cluster_auth",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.public",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_rt_asso",
            "module.vpc.aws_route_table_association.public_rt_asso",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6d2270bb9a01eb",
            "arn": "arn:aws:ec2:us-east-1:466649784722:elastic-ip/eipalloc-0ce6d2270bb9a01eb",
            "association_id": "eipassoc-0a2898a4ac7182164",
            "domain": "vpc",
            "id": "eipalloc-0ce6d2270bb9a01eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fbcb2f1c7092d54d",
            "private_dns": "ip-10-0-0-168.ec2.internal",
            "private_ip": "10.0.0.168",
            "public_dns": "ec2-44-217-90-176.compute-1.amazonaws.com",
            "public_ip": "44.217.90.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:internet-gateway/igw-0246f4d70ebecc1d2",
            "id": "igw-0246f4d70ebecc1d2",
            "owner_id": "466649784722",
            "tags": {
              "Name": "demo-dev-igw",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-igw",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6d2270bb9a01eb",
            "association_id": "eipassoc-0a2898a4ac7182164",
            "connectivity_type": "public",
            "id": "nat-0c8e7d35633011ed4",
            "network_interface_id": "eni-0fbcb2f1c7092d54d",
            "private_ip": "10.0.0.168",
            "public_ip": "44.217.90.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5d80bba4d95f638",
            "tags": {
              "Name": "demo-dev-natgw",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-natgw",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:route-table/rtb-02e5c0789ba26048b",
            "id": "rtb-02e5c0789ba26048b",
            "owner_id": "466649784722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8e7d35633011ed4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-dev-priv-rtable",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-priv-rtable",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:route-table/rtb-05397d30cc18c5bde",
            "id": "rtb-05397d30cc18c5bde",
            "owner_id": "466649784722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0246f4d70ebecc1d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-dev-public-rt",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-public-rt",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068a71b8de8684881",
            "route_table_id": "rtb-02e5c0789ba26048b",
            "subnet_id": "subnet-09c1d137e6f62f0f6"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.public",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084bd1322c573602d",
            "route_table_id": "rtb-02e5c0789ba26048b",
            "subnet_id": "subnet-0383e1b553b2bf9d1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.public",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf17fc83346fa165",
            "route_table_id": "rtb-05397d30cc18c5bde",
            "subnet_id": "subnet-0b5d80bba4d95f638"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05db4744963e3ddee",
            "route_table_id": "rtb-05397d30cc18c5bde",
            "subnet_id": "subnet-03a27deabd5d7c2c4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:subnet/subnet-09c1d137e6f62f0f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c1d137e6f62f0f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466649784722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-dev-private-1",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-private-1",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:subnet/subnet-0383e1b553b2bf9d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0383e1b553b2bf9d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466649784722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-dev-private-2",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-private-2",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:subnet/subnet-0b5d80bba4d95f638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5d80bba4d95f638",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466649784722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-dev-public-1",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-public-1",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:subnet/subnet-03a27deabd5d7c2c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a27deabd5d7c2c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466649784722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-dev-public-2",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-public-2",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "vpc_id": "vpc-0b4a0795bc48665d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466649784722:vpc/vpc-0b4a0795bc48665d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084729de7483e90de",
            "default_route_table_id": "rtb-05b0ea20c0143ac35",
            "default_security_group_id": "sg-0b62e25de3c50539f",
            "dhcp_options_id": "dopt-06107f0c754d77483",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4a0795bc48665d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b0ea20c0143ac35",
            "owner_id": "466649784722",
            "tags": {
              "Name": "demo-dev-vpc-ecs",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            },
            "tags_all": {
              "Name": "demo-dev-vpc-ecs",
              "company": "CT",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "CT-Project"
            }
          }
        }
      ]
    }
  ]
}